--- a/HelpSource/editor.scss
+++ b/HelpSource/editor.scss
@@ -39,8 +39,10 @@ textarea.editor {
     }
 }
 
-.CodeMirror .text-flash {
-    animation: text-flash .35s ease-in;
+.CodeMirror {
+    .text-flash {
+        animation: text-flash .35s ease-in;
+    }
 }
 
 /* syntax hightlighting */
@@ -93,15 +95,17 @@ textarea.editor {
 
 @media print {
     // for print we keep the default colors
-    .cm-s-default .cm-keyword { color: #0000e6; font-weight: bold; }
-    .cm-s-default .cm-built-in { color: #3333bf; font-weight: bold; }
-    .cm-s-default .cm-number { color: #980099; }
-    .cm-s-default .cm-symbol { color: #007300; }
-    .cm-s-default .cm-class { color: #0000d2; font-weight: bold; }
-    .cm-s-default .cm-primitive { color: #0000d2; }
-    .cm-s-default .cm-char { color: #007300; }
-    .cm-s-default .cm-env-var { color: #8c4614; }
-    .cm-s-default .cm-comment { color: #bf0000; font-style: italic; }
-    .cm-s-default .cm-string { color: #5f5f5f; }
-    .cm-s-default .cm-text { color: #000000; }
+    .cm-s-default {
+        .cm-keyword { color: #0000e6; font-weight: bold; }
+        .cm-built-in { color: #3333bf; font-weight: bold; }
+        .cm-s-default .cm-symbol { color: #007300; }
+        .cm-s-default .cm-number { color: #980099; }
+        .cm-class { color: #0000d2; font-weight: bold; }
+        .cm-primitive { color: #0000d2; }
+        .cm-char { color: #007300; }
+        .cm-env-var { color: #8c4614; }
+        .cm-comment { color: #bf0000; font-style: italic; }
+        .cm-string { color: #5f5f5f; }
+        .cm-text { color: #000000; }
+    }
 }
