add warning comment to compiled css files

--- a/HelpSource/scdoc.scss
+++ b/HelpSource/scdoc.scss
@@ -1,3 +1,11 @@
+/*
+
+THE CSS FILE IS GENERATED AUTOMATICALLY.
+ONLY MODIFY THE SCSS FILE AND GENEREATE THE
+CSS FILE OUT OF THIS, SEE themes/README.md
+
+*/
+
 *,
 *::before,
 *::after {
