--- a/HelpSource/scdoc.css
+++ b/HelpSource/scdoc.css
@@ -690,7 +690,7 @@ table#search_settings {
     color: #555;
     width: 100%;
     margin-left: 0px;
-    margin-right: 0px;*/
+    margin-right: 0px;
     margin: 0px;
     padding: 0px;
     border-collapse: collapse;
